--- a/.github/workflows.yml
+++ b/.github/workflows.yml
@@ -1,11 +1,11 @@
-name: coupons # yml文件名
+name: Send messages regularly
  
 on:
   push:
     branches:
       - main
   schedule:   
-    - cron: '0 9 * * *'   # 定时运行的时间，国际标准时间，北京时间要+8
+    - cron: '30 0 * * *'   # 定时运行的时间，国际标准时间，北京时间要+8
  
 jobs:
   run-coupons: # 定时运行微信推送
