--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     # - run: npm install xmlhttprequest
-    # - run: node ./coupons.js
+    # - run: node ./index.js
     
