--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,12 +1,11 @@
 # 该文件用来在 github actions 中自动运行脚本
 name: Send messages regularly
- 
+
 on:
-  push:
-    branches:
-      - main
-  schedule:   
-    - cron: '30 17 * * *'   # 定时运行的时间，国际标准时间，北京时间要+8
+  schedule:
+  # 定时运行的时间，国际标准时间，北京时间要+8
+  - cron:  '30 16 * * *'
+  workflow_dispatch: 
  
 jobs:
   run-coupons: # 任务名
