--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch: 
  
 jobs:
-  run-coupons: # 任务名
+  run-coupons: GoodMorning # 任务名
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main  #采用main分支下的
